[gd_scene load_steps=2 format=3 uid="uid://oityws4e4psk"]

[ext_resource type="Script" uid="uid://ci0nohlb64a1w" path="res://Scripts/TeamManagement.gd" id="1_nwkdv"]

[node name="TeamManagement" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 104.0
offset_right = 104.0
script = ExtResource("1_nwkdv")

[node name="UIContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 701.0
offset_bottom = 653.0

[node name="TitleLabel" type="Label" parent="UIContainer"]
layout_mode = 2
text = "Equipo: [Global.current_team]"

[node name="ItemList" type="ItemList" parent="UIContainer"]
custom_minimum_size = Vector2(600, 300)
layout_mode = 2

[node name="WarningLabel" type="Label" parent="UIContainer"]
layout_mode = 2

[node name="CustomNameInput" type="LineEdit" parent="UIContainer"]
layout_mode = 2
placeholder_text = "Custom Player Name"

[node name="PositionSelector" type="OptionButton" parent="UIContainer"]
layout_mode = 2
item_count = 4
popup/item_0/text = "Fighter"
popup/item_0/id = 0
popup/item_1/text = "Defender"
popup/item_1/id = 1
popup/item_2/text = "Thrower"
popup/item_2/id = 2
popup/item_3/text = "Runner"
popup/item_3/id = 3

[node name="HirePlayerButton" type="Button" parent="UIContainer"]
layout_mode = 2
text = "Contratar Jugador"

[node name="DeletePlayerButton" type="Button" parent="UIContainer"]
layout_mode = 2
text = "Eliminar Jugador"

[node name="ClearNameButton" type="Button" parent="UIContainer"]
layout_mode = 2
text = "Limpiar Nombre"

[node name="MatchStrategy" type="OptionButton" parent="UIContainer"]
layout_mode = 2
item_count = 3
popup/item_0/text = "Ofensiva"
popup/item_0/id = 0
popup/item_1/text = "Defensiva"
popup/item_1/id = 1
popup/item_2/text = "Equilibrada"
popup/item_2/id = 2

[node name="PlayMatchButton" type="Button" parent="UIContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
text = "Jugar Partido"

[node name="BackButton" type="Button" parent="UIContainer"]
layout_mode = 2
text = "Volver"

[node name="ConfirmDeletePopup" type="PopupPanel" parent="UIContainer"]
position = Vector2i(200, 200)
size = Vector2i(308, 118)

[node name="PopupContainer" type="VBoxContainer" parent="UIContainer/ConfirmDeletePopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 304.0
offset_bottom = 114.0

[node name="Label" type="Label" parent="UIContainer/ConfirmDeletePopup/PopupContainer"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
text = "Â¿Eliminar a [nombre]?

"

[node name="ButtonContainer" type="HBoxContainer" parent="UIContainer/ConfirmDeletePopup/PopupContainer"]
layout_mode = 2

[node name="ConfirmDeleteButton" type="Button" parent="UIContainer/ConfirmDeletePopup/PopupContainer/ButtonContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
text = "Confirmar"

[node name="CancelDeleteButton" type="Button" parent="UIContainer/ConfirmDeletePopup/PopupContainer/ButtonContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
text = "Cancelar"

[connection signal="item_clicked" from="UIContainer/ItemList" to="." method="_on_item_list_item_clicked"]
[connection signal="pressed" from="UIContainer/HirePlayerButton" to="." method="_on_hire_player_button_pressed"]
[connection signal="pressed" from="UIContainer/DeletePlayerButton" to="." method="_on_delete_player_button_pressed"]
[connection signal="pressed" from="UIContainer/ClearNameButton" to="." method="_on_clear_name_button_pressed"]
[connection signal="pressed" from="UIContainer/PlayMatchButton" to="." method="_on_play_match_button_pressed"]
[connection signal="pressed" from="UIContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="UIContainer/ConfirmDeletePopup/PopupContainer/ButtonContainer/ConfirmDeleteButton" to="." method="_on_confirm_delete_button_pressed"]
[connection signal="pressed" from="UIContainer/ConfirmDeletePopup/PopupContainer/ButtonContainer/CancelDeleteButton" to="." method="_on_cancel_delete_button_pressed"]
